# RealtimeSECA

./: Cargo.toml  pyproject.toml  sample_batch.json  sample_config.json  seca_config.json
apps/newsmap/: app.py
crates/realtime-seca-cli/: Cargo.toml
crates/realtime-seca-cli/src/: main.rs
crates/realtime-seca-core/: Cargo.toml
crates/realtime-seca-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/realtime-seca-core/src/engine/: baseline.rs  batch_stats.rs  mod.rs  rebuild.rs  scope_mapping.rs  snapshotting.rs  tests.rs  trigger.rs
crates/realtime-seca-core/src/tree/: hkt_builder.rs  mod.rs  models.rs
crates/realtime-seca-core/tests/: large_dataset_regression.rs  process_batch_skeleton.rs
crates/realtime-seca-core/tests/common/: mod.rs
crates/realtime-seca-core/tests/data/: large_batch.json
