[package]
name = "realtime-seca-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "realtime-seca-cli"
path = "src/main.rs"

[dependencies]
realtime-seca-core = { path = "../realtime-seca-core" }
serde.workspace = true
serde_json.workspace = true
csv = "1"
regex = "1"
stop-words = "0.10"
axum = "0.8"
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
